Week3-Intro/00_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx
      image: "coscicorp/website:latest"
      ports:
        - containerPort: 8080
