Week3-Intro/01_namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: new-app
spec:
  containers:
    - name: nginx
      image: "nginx:1.14.2"
      ports:
        - containerPort: 80
