Week3-Intro/02_pod_advanced_features.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: new-app
spec:
  containers:
    - name: nginx
      image: "nginx:1.14.2"
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: "128Mi"
          cpu: "200m"
        limits:
          memory: "256Mi"
          cpu: "500m"
      livenessProbe:
        httpGet:
          path: /
          port: 80
        failureThreshold: 1
        periodSeconds: 10
      startupProbe:
        httpGet:
          path: /
          port: 80
        failureThreshold: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /
          port: 80
        failureThreshold: 30
        periodSeconds: 10
